Materials question links

--- a/notes/notes_topics/notes_pages/composites_materials_notes.html
+++ b/notes/notes_topics/notes_pages/composites_materials_notes.html
@@ -299,7 +299,13 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Construction, cabinets, general product making<br><br><br><br></h3>
+                <h3><b>Uses: </b>Construction, cabinets, general product making<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\Materials\Composites_Q&A.pdf">Composite Questions</a>
+                </div>
             </div>
         </div>
 
