--- a/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
+++ b/notes/notes_topics/notes_pages/papers_and_boards_materials_notes.html
@@ -409,6 +409,12 @@
                     <li>The process is repeated until the pulp is fully dried, after this it is <span class="custom-highlight">pressed</span> to get a smooth finish</li>
                 </ol>
 
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\Materials\papers_and_boards_Q&A.pdf">Papers and Boards Questions</a>
+                </div>
+
 
 
 
