--- a/notes/notes_topics/notes_pages/smart_materials_notes.html
+++ b/notes/notes_topics/notes_pages/smart_materials_notes.html
@@ -330,6 +330,12 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Airbag sensors, musical greeting cards, pressure sensors<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\Materials\smart_materials_Q&A.pdf">Smart Materials Questions</a>
+                </div>
         </div>
 
         <div class="footer">
