--- a/notes/notes_topics/notes_pages/metals_materials_notes.html
+++ b/notes/notes_topics/notes_pages/metals_materials_notes.html
@@ -424,7 +424,13 @@
                         </td>                        
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Ship propellers, Electrical components, Locks, Gears<br><br><br><br></h3>
+                <h3><b>Uses: </b>Ship propellers, Electrical components, Locks, Gears<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\Materials\Metals_Q&A.pdf">Metals Questions</a>
+                </div>
 
                 <!-- <div class="download-page">
                     <h3>Get a copy of this page:
