--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -384,7 +384,13 @@
                         </td>                        
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Car tires, matting/flooring, medical gloves<br><br><br><br></h3>
+                <h3><b>Uses: </b>Car tires, matting/flooring, medical gloves<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\Materials\Polymers_Q&A.pdf">Polymers Questions</a>
+                </div>
             </div>
         </div>
 
