--- a/notes/notes_topics/notes_pages/textiles_materials_notes.html
+++ b/notes/notes_topics/notes_pages/textiles_materials_notes.html
@@ -313,7 +313,13 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Coatings for cooking pans, reduce friction on cutting tools<br><br><br><br></h3>
+                <h3><b>Uses: </b>Coatings for cooking pans, reduce friction on cutting tools<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\Materials\Textiles_Q&A.pdf">Textiles Questions</a>
+                </div>
             </div>
         </div>
 
