PCOM question link

--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -181,6 +181,10 @@
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
                 </div>
 
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\Materials\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
+                </div>
+
                 <!-- <div class="download-page">
                     <h3>Get a copy of this page:
                         <a href="..\..\..\documents\2. Performance characteristics of materials\DTBase_Performance_characteristics_of_materials.pdf">Performance Characteristics of Materials</a>
