--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -182,7 +182,7 @@
                 </div>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="..\..\..\documents\Q&A\Materials\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
+                    <a href="..\..\..\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
                 </div>
 
                 <!-- <div class="download-page">
