--- a/notes/notes_topics/notes_pages/alloying_notes.html
+++ b/notes/notes_topics/notes_pages/alloying_notes.html
@@ -132,6 +132,12 @@
                         <li><b>Bronze</b> - Copper, Tin</li>
                         <li><b>Duralumin</b> - Aluminium, Copper</li>
                     </ul></h3>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Alloying_Q&A.pdf">Alloying Questions</a>
+                    </div>
                 
                 <!-- <div class="download-page">
                     <h3>Get a copy of this page:
