--- a/notes/notes_topics/notes_pages/design_decisions_notes.html
+++ b/notes/notes_topics/notes_pages/design_decisions_notes.html
@@ -132,6 +132,12 @@
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Design_decisions_Q&A.pdf">Design Decisions Questions</a>
+                </div>
             </div>
 
 
