--- a/notes/notes_topics/notes_pages/finishing_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/finishing_techniques_notes.html
@@ -505,6 +505,12 @@
                 </table>
                 <h3><b>Uses: </b>Toblerone card packaging, birthday cards<br><br></h3>
 
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Finishing_techniques_Q&A.pdf">Finishing Techniques Questions</a>
+                </div>            
+
                 
             </div>
         </div>
