--- a/notes/notes_topics/notes_pages/heat_treatments_notes.html
+++ b/notes/notes_topics/notes_pages/heat_treatments_notes.html
@@ -220,6 +220,12 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>To relieve stress on metal after cold working process for better physcial properties<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Heat_treatments_Q&A.pdf">Heat Treatments Questions</a>
+                </div> 
             </div>
         </div>
 
