--- a/notes/notes_topics/notes_pages/lamination_notes.html
+++ b/notes/notes_topics/notes_pages/lamination_notes.html
@@ -125,7 +125,13 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Bridges, construction, kitchen tables<br><br><br><br></h3>
+                <h3><b>Uses: </b>Bridges, construction, kitchen tables<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Lamination_Q&A.pdf">Lamination Questions</a>
+                </div> 
             </div>
         </div>
 
