--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -280,6 +280,12 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Buckets, plastic footballs, dustbins, oil drums<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Moulding_Q&A.pdf">Moulding Questions</a>
+                </div> 
             </div>
         </div>
 
