--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -181,6 +181,8 @@
                     <img src="../../../images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
                 </div>
 
+                <h3><b>Topic test:</b></h3>
+
                 <div class="blurbox" style="background-color: #bdbdbd;">
                     <a href="..\..\..\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
                 </div>
