--- a/notes/notes_topics/notes_pages/casting_notes.html
+++ b/notes/notes_topics/notes_pages/casting_notes.html
@@ -283,6 +283,12 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Bone casts, sculpturing<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Casting_Q&A.pdf">Casting Questions</a>
+                </div>
             </div>
         </div>
 
