--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -775,6 +775,12 @@
                     <h2><hr><hr></h2>
                 </div>
 
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Joining_techniques_Q&A.pdf">Joining Techniques Questions</a>
+                </div> 
+
                 
 
             </div>
