--- a/notes/notes_topics/notes_pages/machining_notes.html
+++ b/notes/notes_topics/notes_pages/machining_notes.html
@@ -344,6 +344,12 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Shaping metal, patterns on metal trolley bases<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Machining_Q&A.pdf">Machining Questions</a>
+                </div> 
             </div>
         </div>
 
