--- a/notes/notes_topics/notes_pages/printing_notes.html
+++ b/notes/notes_topics/notes_pages/printing_notes.html
@@ -247,6 +247,12 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Wallpaper, gift wrapping<br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Printing_Q&A.pdf">Printing Questions</a>
+                </div> 
             </div>
         </div>
 
