--- a/notes/notes_topics/notes_pages/CAD_notes.html
+++ b/notes/notes_topics/notes_pages/CAD_notes.html
@@ -214,6 +214,12 @@
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="..\..\..\documents\Q&A\digital_tech_exercises\Computer_aided_design_Q&A.pdf">Computer Aided Design (CAD) Questions</a>
+                </div> 
             </div>
         </div>
 
