--- a/notes/notes_topics/DigitalTechnologies.html
+++ b/notes/notes_topics/DigitalTechnologies.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
+                    <a href="../notes.html">Notes</a>
                 </div>
 
                 <div class="nav-link-wrapper">
