--- a/notes/notes_topics/notes_pages/Influence_of_design_anthropometrics_notes.html
+++ b/notes/notes_topics/notes_pages/Influence_of_design_anthropometrics_notes.html
@@ -119,6 +119,12 @@
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\factors_influencing_development_of_products_exercises\Influence_on_design_of_anthropometrics_and_ergonomics_Q&A.pdf">Influence on Design of Anthropometrics and Ergonomics Questions</a>
+                    </div>
                 </div>
             </div>
         </div>
