--- a/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
+++ b/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
@@ -324,6 +324,12 @@
                     <h2><hr><hr></h2>
                 </div>
 
+                <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\factors_influencing_development_of_products_exercises\Design_influence_methods_figures_Q&A.pdf">Design Influence Methods Figures Questions</a>
+                    </div>
+
             </div>
         </div>
 
