--- a/notes/notes_topics/notes_pages/influence_of_aesthetics_notes.html
+++ b/notes/notes_topics/notes_pages/influence_of_aesthetics_notes.html
@@ -109,6 +109,14 @@
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\factors_influencing_development_of_products_exercises\Influence_of_aesthetics_Q&A.pdf">Influence of Aesthetics Questions</a>
+                    </div>
+
+                    
                 </div>
             </div>
         </div>
