--- a/notes/notes_topics/notes_pages/user_centred_design_notes.html
+++ b/notes/notes_topics/notes_pages/user_centred_design_notes.html
@@ -141,6 +141,12 @@
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\factors_influencing_development_of_products_exercises\User_centred_design_Q&A.pdf">User Centred Design Questions</a>
+                    </div>
                 </div>
             </div>
         </div>
