--- a/notes/notes_topics/notes_pages/methods_of_production_notes.html
+++ b/notes/notes_topics/notes_pages/methods_of_production_notes.html
@@ -275,6 +275,12 @@
                     <h2><hr><hr></h2>
                 </div>
 
+                <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\features_of_manufacturing_industries\Methods of production_Q&A.pdf">Methods of Production</a>
+                    </div>
+
                 
 
                 
