--- a/notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
+++ b/notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
@@ -558,7 +558,17 @@
                         </ul>
                     </td>
                 </tr>
-            </table><br><br/>
+            </table>
+
+            <div class="notes-content-subheader">
+                <h2><hr><hr></h2>
+            </div>
+
+            <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\features_of_manufacturing_industries\Modern manufacturing methods and systems_Q&A.pdf">Modern Manufacturing Methods and Systems</a>
+                    </div>
 
 
             </div>
