--- a/notes/notes_topics/notes_pages/quality_control_systems_notes.html
+++ b/notes/notes_topics/notes_pages/quality_control_systems_notes.html
@@ -215,7 +215,11 @@
                             </td>
                         </tr>
                     </table>
-                    <h3><b>Applications: </b>High quality products, construction, engines<br><br></h3>
+                    <h3><b>Applications: </b>High quality products, construction, engines</h3>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
 
                     <h3><b><u>Total quality management (TQM):</b></u></h3>
                 <h3>
@@ -255,7 +259,10 @@
                             </td>
                         </tr>
                     </table>
-                    <h3><b>Applications: </b>Goods and services</h3><br><br/>
+                    <h3><b>Applications: </b>Goods and services</h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
 
                     <h3><b><u>ISO 9000:</b></u></h3>
                 <h3>
@@ -273,7 +280,17 @@
                         <li>Process approach (deploy resources effectively/prioritise improvements)</li>
                         <li>Improvement (improve organisational performance/capabilities)</li>
                         <li>Evidence-based decision making (using data and analysis)</li>
-                        <li>Relationship management (share expertise/resources/information)</li></h3><br><br/>
+                        <li>Relationship management (share expertise/resources/information)</li></h3>
+                        
+                        <div class="notes-content-subheader">
+                            <h2><hr><hr></h2>
+                        </div>
+
+                        <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\features_of_manufacturing_industries\Quality Monitoring Systems_Q&A.pdf">Quality Monitoring Systems</a>
+                    </div>
 
 
 
