--- a/notes/notes_topics/notes_pages/safe_working_notes.html
+++ b/notes/notes_topics/notes_pages/safe_working_notes.html
@@ -221,7 +221,17 @@
                     <li>Following HSE advice/guidlines</li></ul>
 
                     <h3><b><u>Recording and storing of risk assessmnet documentation:</b></u></h3>
-                    <p>Documentation of risks and how to store item must be recorded and stored in the workplace (e.g. COSHH data sheets, BSI, CE, ISO)</p><br><br/>
+                    <p>Documentation of risks and how to store item must be recorded and stored in the workplace (e.g. COSHH data sheets, BSI, CE, ISO)</p>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\safe_working_practices_exercises\Adopting_safe_working_practices_Q&A.pdf">Adopting Safe Working Practices</a>
+                    </div>
 
 
 
