--- a/notes/notes_topics/notes_pages/technological_developments_notes.html
+++ b/notes/notes_topics/notes_pages/technological_developments_notes.html
@@ -274,6 +274,12 @@
                     <h4>Outsourcing:</h4>
                     <li>Obtaining goods and services from an outside supplier</li>
 
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\effects_of_tech_dev_exercises\Effects_tech_developements_Q&A.pdf">Effects of Technological Developments</a>
+                    </div>
+
 
 
 
