--- a/notes/notes_topics/notes_pages/collection_collation_and_analysis_to_make_decisions_notes.html
+++ b/notes/notes_topics/notes_pages/collection_collation_and_analysis_to_make_decisions_notes.html
@@ -231,6 +231,12 @@
                         <li>Efficiency</li>
                         <li>Cycle time of production</li>
                     </ul></h3> 
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\information_handling_planning_exercises\Explore_create_and_evaluate_design_ideas_Q&A.pdf">Collection, Collation and Analysis to Make Decisions</a>
+                    </div>
                 </div>
             </div>
         </div>
