--- a/notes/notes_topics/notes_pages/consumer_rights_notes.html
+++ b/notes/notes_topics/notes_pages/consumer_rights_notes.html
@@ -123,6 +123,12 @@
                         <li>Of satisfactory quality</li>
                         <li>Fit for purpose</li>
                     </ul></h3>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\current_legislation_exercises\Consumer_rights_legislation_Q&A.pdf">Consumer Rights Legislation</a>
+                    </div>
                 </div>
             </div>
         </div>
