--- a/notes/notes_topics/notes_pages/health_and_safety_laws_notes.html
+++ b/notes/notes_topics/notes_pages/health_and_safety_laws_notes.html
@@ -196,7 +196,13 @@
                     <li>Give off vapours that can cause dizziness and nausea</li>
                     <li>Hazardous when used in confined areas</li>
                     <li>Risk assessment must be carried out with VOCs to reduce their danger</li>
-                </ul></h3><br><br/>
+                </ul></h3>
+                
+                <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\current_legislation_exercises\Health_and_safety_Q&A.pdf">Health and Safety Laws</a>
+                    </div>
 
 
 
