--- a/notes/notes_topics/notes_pages/modelling_the_costing_of_projects_notes.html
+++ b/notes/notes_topics/notes_pages/modelling_the_costing_of_projects_notes.html
@@ -143,6 +143,12 @@
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\information_handling_planning_exercises\modelling_the_costing_of_projects_to_achieve_optimum_outcome_Q&A.pdf">Modelling the Cost of Projects to Achieve Optimum Outcomes</a>
+                    </div>
                 </div>
             </div>
         </div>
