--- a/notes/notes_topics/notes_pages/project_management_notes.html
+++ b/notes/notes_topics/notes_pages/project_management_notes.html
@@ -177,8 +177,18 @@
 
                     <h3>Increase customer satisfaction - increased profits:</h3>
                     <h3><ul>
-                        <li>More satisfied customers lead to increased profit, long service life/high qualitiy leads to customers recommending products which increases profits</li><br><br/>
+                        <li>More satisfied customers lead to increased profit, long service life/high qualitiy leads to customers recommending products which increases profits</li>
                     </ul></h3>
+
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\further_processes_techniques_exercises\Project_management_Q&A.pdf">Project Management Systems Questions</a>
+                    </div>
 
                     
 
