--- a/notes/notes_topics/notes_pages/sta_to_explore_notes.html
+++ b/notes/notes_topics/notes_pages/sta_to_explore_notes.html
@@ -174,7 +174,16 @@
                         <li>Understanding how all parts relate to eachother</li>
                     </ul></h3>
 
-                    <h3><b>Flow diagrams</b> and <b>feedback loops</b> help to understand a complex system and identify where changes can be made to improve the outcome</h3><br><br/>
+                    <h3><b>Flow diagrams</b> and <b>feedback loops</b> help to understand a complex system and identify where changes can be made to improve the outcome</h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
+                    
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\further_processes_techniques_exercises\Strategies_techniques_and_approaches_to_explore_and_create_design_idea_Q&A.pdf">Strategies Techniques and Approaches to Explore, Create and Evaluate Design Ideas Questions</a>
+                    </div>
                     
 
 
