--- a/notes/notes_topics/notes_pages/wider_issues_tech_notes.html
+++ b/notes/notes_topics/notes_pages/wider_issues_tech_notes.html
@@ -112,7 +112,13 @@
                         <li>Use as few different materials as possible</li>
                         <li>Mark the materials/polymers in order to sort them correctly</li>
                         <li>Avoid surface treatments in order to keep the materials 'clean'</li>
-                    </ul></h3><br><br/>
+                    </ul></h3>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\design_for_maintenance_and_cleaner_environment_exercises\Wider_issues_of_using_cleaner_technology_Q&A.pdf">Wider Issues of Using Cleaner Technologies Questions</a>
+                    </div>
                 
 
  
