--- a/notes/notes_topics/notes_pages/product_life_cycle_notes.html
+++ b/notes/notes_topics/notes_pages/product_life_cycle_notes.html
@@ -293,9 +293,21 @@
                     <li>Groundwater pollution</li>
                     <li>Biodiversity impacts</li>
                     <li>Soil fertility effects</li>
-                </ul><br><br/>
+                </ul>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
+                <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\design_for_maintenance_and_cleaner_environment_exercises\products_life_cycle_Q&A.pdf">Product Life Cycle Questions</a>
+                    </div>
 
             </div>
+
+            
         </div>
 
         <div class="footer">
