--- a/notes/notes_topics/notes_pages/property_rights_notes.html
+++ b/notes/notes_topics/notes_pages/property_rights_notes.html
@@ -181,6 +181,15 @@
                             trademark</li>
                     </ul></h3>
                     <h3>*Logos are covered by Trademark</h3>
+                    <div class="notes-content-subheader">
+                        <h2><hr><hr></h2>
+                    </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\information_handling_planning_exercises\Intellectual_Property_rights_Q&A.pdf">Property Rights Questions</a>
+                    </div>
                 </div>
             </div>
         </div>
