--- a/notes/notes_topics/notes_pages/stages_of_a_products_life_cycle_notes.html
+++ b/notes/notes_topics/notes_pages/stages_of_a_products_life_cycle_notes.html
@@ -143,6 +143,16 @@
                 <div class="notes-content-picture" >
                     <img src="../../../images/productlifecycle-2.png" alt="Diagram of shape dimensions">
                 </div>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
+
+                <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\further_processes_techniques_exercises\Stages_of_products_life_cycle_Q&A.pdf">Stages of a Products Life Cycle Questions</a>
+                    </div>
                 
 
  
