--- a/notes/notes_topics/notes_pages/standard_for_products_notes.html
+++ b/notes/notes_topics/notes_pages/standard_for_products_notes.html
@@ -135,6 +135,12 @@
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
                     </div>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\information_handling_planning_exercises\Standards_of_products_Q&A.pdf">Standards for Products Questions</a>
+                    </div>
                 </div>
             </div>
         </div>
