--- a/notes/notes_topics/notes_pages/maths_arithmetic.html
+++ b/notes/notes_topics/notes_pages/maths_arithmetic.html
@@ -171,6 +171,16 @@
                     <p>Percentage reduction = <sup>Old - New</sup>&frasl;<Sub>Old</Sub> = <sup>15</sup>&frasl;<Sub>123</Sub> = 0.122 = 12.2% </p>
                 </div>
 
+                <div class="notes-content-subheader">
+                    <h2><hr></h2>
+                </div>
+
+                <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\maths_exercises\DT_Maths_Number_Q&A.pdf">Number, Percentages, and Percentiles Questions</a>
+                    </div>
+
             </div>
         </div>
 
