--- a/notes/notes_topics/notes_pages/maths_ratios.html
+++ b/notes/notes_topics/notes_pages/maths_ratios.html
@@ -174,6 +174,15 @@
                     <em>Free space = 45 x 5 (5 ratio parts free space) = 225cm<sup>3</sup></em><br><br/>
                     <em>225 is smaller than 250, not enough free space</em>
                 </div>
+                <div class="notes-content-subheader">
+                    <h2><hr></h2>
+                </div>
+
+                <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="..\..\..\documents\Q&A\maths_exercises\DT_Maths_Ratio_Q&A.pdf">Ratio Questions</a>
+                    </div>
             </div>
 
 
