--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -253,6 +253,10 @@
 
                 <h3><b><u>Rotational moulding:</b></u></h3>
                 <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/rotationalmoulding.png" alt="Diagram of shape dimensions">
+                    </div>
                     <p><b>How it works:</b></p>
                     <ul>
                         <ol><li>Powdered polymer loaded into mould</li>
