--- a/notes/notes_topics/notes_pages/maths_arithmetic.html
+++ b/notes/notes_topics/notes_pages/maths_arithmetic.html
@@ -171,6 +171,17 @@
                     <p>Percentage reduction = <sup>Old - New</sup>&frasl;<Sub>Old</Sub> = <sup>15</sup>&frasl;<Sub>123</Sub> = 0.122 = 12.2% </p>
                 </div>
 
+                <h3><b>Question 3)</b></h3>
+                <p>The budget os this high speed railway was estimated to cost £50 million, however, due to rising costs the company responsible estimate the cost will increase by 57%. Work out the new cost of the railway project.</p>
+                                
+                <div class="worked-example">
+                    <p><b>Step 1) Convert the percentage increase into a decimal:</b></p>
+                    <em>57% = 0.57</em>
+                    
+                    <p><b>Step 2) Calculate the new cost of the project:</b></p>
+                    <em>New time = 50 x (1 + 0.57) = £78.5 million</em>
+                </div>
+
                 <div class="notes-content-subheader">
                     <h2><hr></h2>
                 </div>
