--- a/notes/notes_topics/notes_pages/maths_ratios.html
+++ b/notes/notes_topics/notes_pages/maths_ratios.html
@@ -174,6 +174,20 @@
                     <em>Free space = 45 x 5 (5 ratio parts free space) = 225cm<sup>3</sup></em><br><br/>
                     <em>225 is smaller than 250, not enough free space</em>
                 </div>
+                <div>
+                    <h3><b>Question 3)</b></h3>
+                    <p>A student needs to cut a plank of wood into three pieces in the ratio 2:5:9. The plank is 360cm. Calculate the longest piece.</p>
+
+                <div class="worked-example">
+                    <p><b>Step 1) Calculate the total 'ratio parts':</b></p>
+                    <em>Total 'ratio parts' = 2 + 5 + 9 = 16</em>
+
+                    <p><b>Step 2) Calculate the length of one 'ratio part':</b></p>
+                    <em>1 ratio part = <sup>360</sup>&frasl;<Sub>16</Sub>  = 22.5</em>
+                    
+                    <p><b>Step 2) Calculate the longest length (9 'ratio parts'):</b></p>
+                    <em>Longest length = 22.5cm x 9 = 202.5cm</em><br><br/>
+                </div>
                 <div class="notes-content-subheader">
                     <h2><hr></h2>
                 </div>
