--- a/notes/notes_topics/notes_pages/maths_surface_area_and_volume.html
+++ b/notes/notes_topics/notes_pages/maths_surface_area_and_volume.html
@@ -147,16 +147,39 @@
 
                 <div class="worked-example">
                     <p><b>Step 1) Calculate the entire sheet metal area as if it were a square:</b></p>
-                    <em>Total area = 650mm x (340+500)mm = 546,000mm<sup>3</sup></em>
+                    <em>Total area = 650mm x (340+500)mm = 546,000mm<sup>2</sup></em>
                     
                     <p><b>Step 2) Calculate the 2 areas being 'chopped off' and subtract them from the total area</b></p>
-                    <em>Triangle area = 0.5 x 340mm x (650-400)mm = 42,500mm<sup>3</sup></em><br><br>
-                    <em>Rectangle area = 350mm x 200mm = 70,000mm<sup>3</sup></em><br><br>
-                    <em>Total area = 546,000 - 42,500 - 70,000 = 433,500mm<sup>3</sup></em>
+                    <em>Triangle area = 0.5 x 340mm x (650-400)mm = 42,500mm<sup>2</sup></em><br><br>
+                    <em>Rectangle area = 350mm x 200mm = 70,000mm<sup>2</sup></em><br><br>
+                    <em>Total area = 546,000 - 42,500 - 70,000 = 433,500mm<sup>2</sup></em>
 
                     <p><b>Step 3) Calculate thickness:</b></p>
                     <em><sup>Volume</sup>&frasl;<sub>Cross-sectional area</sub> = Thickness</em><br><br>
                     <em><sup>900,000</sup>&frasl;<sub>433,500</sub> = 2.07612… = 2.1mm</em>
+                </div>
+
+
+                <h3><b>Question 2)</b></h3>
+                <p>The figure shows some acylic to be cut for a laptop. Calculate the area of the acrylic sheep. All measurements are in mm.</p>
+
+
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/maths_q_surface_area_Q2.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <div class="worked-example">
+                    <p><b>Step 1) Calculate the entire sheet metal area as if it were a square:</b></p>
+                    <em>Total area = 500mm x (200+100)mm = 150,000mm<sup>2</sup></em>
+                    
+                    <p><b>Step 2) Calculate the triangle area being 'chopped off'.</b></p>
+                    <em>Triangle area = 0.5 x (500 - 250)mm x 100mm = 12,500mm<sup>2</sup></em>
+
+                    <p><b>Step 3) Calculate the circle area being cut out.</b></p>
+                    <em>Circle area = &Pi; x 50<sup>2</sup>mm = 7854.0<sup>2</sup>mm</em><br><br>
+
+                    <p><b>Step 4) Calculate remaining area:</b></p>
+                    <em>Remaining area = 150,000 - 12,500 - 7,854 = 129,646mm<sup>2</sup></em><br><br>
                 </div>
 
                 <div class="notes-content-subheader">
