--- a/notes/notes.html
+++ b/notes/notes.html
@@ -79,26 +79,16 @@
             
 
         </header>
-        <div class="quote">
+        <div class="quote" margin-top>
             <h2>Free handmade revision notes tailored for GCSE and A Level Design and Technology</h2>
         </div>
 
         <!-- Search bar section -->
-        <div class="search-container" style = "background-color: whitesmoke;">
+        <div class="search-container" style="background-color: whitesmoke;">
             <input type="text" id="searchInput" placeholder="Search for topics...">
             <button onclick="search()">Search</button>
         </div>
         <ul id="searchResults"></ul>
-
-        <!-- <div class="search-container">
-            <form class="search-form">
-                <div class="search-form-flex">
-                    <i class="fa fa-search fa-2x"></i>
-                    <input class="search-input" id="search-input" type="text" placeholder="Search for Topics...">
-                </div>
-                    <button class="search-button" id="search-button" type="submit">Search</button>
-            </form>
-        </div> -->
 
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
