--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -79,8 +79,9 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_casting.jpg)" title="casting background">
-                <h1 style="color:white"><u><b>Casting</b></u></h1>
+            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_joining.jpg); opacity:  0.8;" title="casting background">
+                <div class="overlay"></div>
+                <h1 style="color:rgb(0, 0, 0);"><u><b>Joining Techniques</b></u></h1>
             </div>
 
             <div class="notes-content">
