--- a/notes/notes_topics/notes_pages/machining_notes.html
+++ b/notes/notes_topics/notes_pages/machining_notes.html
@@ -308,7 +308,7 @@
                 </table>
                 <h3><b>Uses: </b>Shape sheet metal into shapes with holes, washers, cogs, tin can pull tabs<br><br></h3>
 
-                <h3><b><u>Pressing:</b></u></h3>
+                <h3 id="Pressing" ><b><u>Pressing:</b></u></h3>
                 <h3>
 
                     <div class="notes-content-picture" >
