Question search engine up to section 5

--- a/exercises/exercises.html
+++ b/exercises/exercises.html
@@ -80,9 +80,16 @@
         <!-- <div class="comingsoon">
             Exam style questions and solutions coming soon!
         </div> -->
-        <div class="quote">
+        <div class="quote" style="background-color:rgb(255, 255, 255);" >
             <h2>Free exam style questions ands solutions tailored for GCSE and A Level Design and Technology</h2>
         </div>
+
+        <!-- Search bar section -->
+        <div class="search-container" style="background-color: rgb(255, 255, 255);">
+            <input type="text" id="searchInput" placeholder="Search for questions by topics...">
+            <button id="searchButton">Search</button>
+        </div>
+        <ul id="searchResults"></ul>
 
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
@@ -230,5 +237,5 @@
 
     </div>
 </body>
-<script src="../script.js"></script>
+<script src="../script_searchenginequestions.js"></script>
 </html>
