--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-coord_geo.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths_graphs.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Graphs&Charts_Q&A.pdf">Graphs and charts</a>
