--- a/exercises/exercise_topics/MathematicsForD&T.html
+++ b/exercises/exercise_topics/MathematicsForD&T.html
@@ -82,7 +82,7 @@
              <div class="portfolio-items-wrapper-notes">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths_worked_examples.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths_worked_examples.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Number_Q&A.pdf">Number, percentages, and percentiles</a>
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-ratios.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-ratios.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Ratio_Q&A.pdf">Ratio</a>
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-sa-vol.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-sa-vol.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_SA&Volume_Q&A.pdf">Surface area / Volume</a>
@@ -109,7 +109,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-trig.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-trig.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Trig_Q&A.pdf">Trigonometry</a>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths_graphs.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths_graphs.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Graphs&Charts_Q&A.pdf">Graphs and charts</a>
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../images/maths-stats.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-stats.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="..\..\documents\Q&A\maths_exercises\DT_Maths_Stats_Q&A.pdf">Statistics</a>
