--- a/notes/notes_topics/MathematicsForD&T.html
+++ b/notes/notes_topics/MathematicsForD&T.html
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths-graphs.jpg);  background-size: cover; background-position: center center;"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths_graphs.jpg);  background-size: cover; background-position: center center;"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="notes_pages\maths_graphs_and_charts.html">Graphs and Charts</a>
